# usb_midi_host

./: CMakeLists.txt  README.md  README_midi_host.md  Rppicomidi_USBH_MIDI_Device.h  Rppicomidi_USBH_MIDI_Transport.h  library.json  library.properties  rppicomidi_USBH_MIDI.cpp  rppicomidi_USBH_MIDI.h  rppicomidi_USBH_MIDI_Config.h  rppicomidi_USBH_MIDI_namespace.h  usb_midi_host.c  usb_midi_host.h  usb_midi_host_app_driver.c
.github/ISSUE_TEMPLATE/: help-needed.md
example/: CMakeLists.txt  midi_host_example.c
examples/C-code/: CMakeLists.txt
examples/C-code/rppicomidi_USBH_MIDI_example/: CMakeLists.txt  rppicomidi_USBH_MIDI_example.cpp
examples/C-code/usb_midi_host_example/: CMakeLists.txt  tusb_config.h  usb_midi_host_example.c
examples/C-code/usb_midi_host_pio_example/: CMakeLists.txt  tusb_config.h  usb_midi_host_pio_example.c
examples/arduino/: usb_midi_host_example.ino
examples/arduino/rppicomidi_USBH_MIDI_example/: rppicomidi_USBH_MIDI_example.ino
examples/arduino/usb_midi_host_example/: usb_midi_host_example.ino
examples/arduino/usb_midi_host_pio_example/: usb_midi_host_pio_example.ino
